[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/feelin-frisky/scripts/settings_menu.gd" id="1_u35gg"]

[node name="SettingsMenu" type="Popup"]
initial_position = 2
size = Vector2i(720, 300)
visible = true
script = ExtResource("1_u35gg")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="SettingsTabs" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="TabBar" parent="SettingsTabs"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VideoSettings" type="GridContainer" parent="SettingsTabs/Video/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2

[node name="DisplayModeLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display Mode"

[node name="DisplayModeBtn" type="OptionButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="VSyncLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "VSync"

[node name="VSyncBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="DisplayFPSLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display FPS"

[node name="DisplayFPSBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFPSLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Max FPS"

[node name="MaxFPSSetting" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
size_flags_horizontal = 10

[node name="MaxFPSValue" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings/MaxFPSSetting"]
layout_mode = 2
text = "Max"

[node name="MaxFPSSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/MaxFPSSetting"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0
scrollable = false

[node name="BrightnessLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
max_value = 2.0
step = 0.1
value = 1.0
scrollable = false

[node name="Audio" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="AudioSettings" type="GridContainer" parent="SettingsTabs/Audio/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2

[node name="MasterVolLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
scrollable = false

[node name="MusicVolLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
scrollable = false

[node name="SFXVolLabel" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -10.0
scrollable = false

[node name="Gameplay" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GameplaySettings" type="GridContainer" parent="SettingsTabs/Gameplay/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2

[connection signal="item_selected" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayModeBtn" to="." method="_on_display_mode_btn_item_selected"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/VSyncBtn" to="." method="_on_v_sync_btn_toggled"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayFPSBtn" to="." method="_on_display_fps_btn_toggled"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/MaxFPSSetting/MaxFPSSlider" to="." method="_on_max_fps_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/SFXVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
